added render engine as ejs

--- a/client/html/home.ejs
+++ b/client/html/home.ejs
@@ -13,7 +13,9 @@
         <div id="nav"></div>
 
         <div id="main">
-            
+            <div class="splash">
+                
+            </div>
         </div>
 
         <!-- Injected through React  -->
