added splash on home screen: :

--- a/client/html/home.ejs
+++ b/client/html/home.ejs
@@ -18,7 +18,20 @@
 
         <div id="main">
             <div class="mainSection splash">
-                
+                <div class="splashContainer">
+                    <h1 class="splashLogo"> NewsSight </h1>
+                    <h1 class="splashText"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sapien nibh, tincidunt vel mi sed, ullamcorper iaculis leo. Etiam quis turpis pretium, pretium odio vel, venenatis velit. Proin accumsan dignissim auctor. </h1>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <button class="splashButton"> About Us </button>
+                            </div>
+                            <div class="col-md-6">
+                                <button class="splashButton"> Start Browsing </button>                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="mainSection popularNews">
 
