added Login Component as JSX

--- a/client/html/login.ejs
+++ b/client/html/login.ejs
@@ -18,19 +18,9 @@
 
         <div id="main" class="loginMain">
             <div class="loginForm">
-                <div class="loginCol">
-                    <h2 class="loginColTitle"> I Have an account </h2>
-                    <div class="loginWrapper">
-                        <h3 class="loginLabel" for="username"> Username </h3>
-                            <input class="loginInput" type="text" id="username" placeholder="johnDoe1983">
-                        <h3 class="loginLabel" for="username"> Password </h3>
-                            <input class="loginInput" type="password" id="password" placeholder="**********">
-                    </div>
-                    <br />
-                    <br />
-                    <button class="loginButton loginSubmit"> Log In </button>
+                <div class="loginCol" id="leftLoginColumn">
                 </div>
-                <div class="loginCol">
+                <div class="loginCol" id="rightLoginColumn">
                     <h2 class="loginColTitle"> Register Now </h2>
                     <h2 class="loginColSubHeading"> (Its FREE!) </h2>
                     <div class="loginWrapper">
@@ -42,7 +32,6 @@
                             <input class="loginInput" type="password" id="passwordRegister" placeholder="**********">
                         <h3 class="loginLabel" for="username"> Confirm password </h3>
                             <input class="loginInput" type="password" id="ConfirmpasswordRegister" placeholder="**********">
-                        <br />
                     </div>
                     <button class="loginButton registerSubmit"> Log In </button>
                 </div>
