--- a/client/js/app/components/styles/HomeJumbotron.css
+++ b/client/js/app/components/styles/HomeJumbotron.css
@@ -1,6 +1,30 @@
 
 .HomeJumbotron {
     width: 100%;
-    height: 300px;
-    background-color: #ABCDEF
+    background-color: #FFFFFF;
+    padding-left: 50px;
+    padding-right:50px;
+    padding-top:100px;
+    padding-bottom: 100px;
+    font-family: 'Raleway', sans-serif;
+    line-height: 150%;
+}
+
+.titleDiv {
+
+}
+
+.messageDiv {
+    margin-top:40px;
+    width:60%;
+}
+
+.title {
+    color: #1A237E;
+    font-size: 3em;
+}
+
+.message {
+    color: #1A237E;
+    font-size: 1em;
 }
