--- a/client/js/app/components/styles/HomeJumbotron.css
+++ b/client/js/app/components/styles/HomeJumbotron.css
@@ -2,7 +2,7 @@
 .HomeJumbotron {
     width: 100%;
     background-color: #FFFFFF;
-    padding-left: 50px;
+    padding-left: 10%;
     padding-right:50px;
     padding-top:100px;
     padding-bottom: 100px;
