--- a/client/js/app/components/styles/ArticleHome.css
+++ b/client/js/app/components/styles/ArticleHome.css
@@ -1,40 +1,33 @@
 
 .ArticleHome {
-    width:80%;
-    margin-left: 10%;
-    padding-top: 50px;
-    background-color: #F0F8FF;
-    height: 300px;
-    margin-bottom: 50px;
+    width:100%;
+    margin-left: 0%;
+    background-color: #ecf0f1;
+    padding-bottom: 50px;
+    margin-bottom:50px;
 }
 
-.slideContainer {
-    height: 200px;
-    background-color: darkgrey;
-    width:400px;
-}
-
-.slideContent {
-    padding-top:20px;
-    padding-left:70px;
-    color: #000000;
-}
 
 .articleColLeft {
-    width:40%;
-    display:block;
-    float:left;      
-    margin-left: 40px;  
+    width:35%;
+    display:inline-block;
+    margin-left: 10%;  
 }
 
 .articleColRight {
-    width:40%;
+    width:35%;
     display:block;
     float:right;       
-    margin-right:40px;   
+    margin-right:10%;   
 }
 
-.background {
+.entityLabel {
     width:100%;
-    height: 100%;
+    margin-top:50px;
+    background-color: #2c3e50;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.7em;
+    padding-left: 20px;
+    padding-top:10px;
+    padding-bottom:10px;
 }
