--- a/client/html/home.ejs
+++ b/client/html/home.ejs
@@ -16,7 +16,10 @@
 
         <div id="jumbotron"></div>
 
-        <div id="main"></div>
+        <div id="main">
+            <!-- Loading bar -->
+            <img style="display:block; margin:auto" src="https://i.redd.it/ounq1mw5kdxy.gif" />
+        </div>
 
         <!-- Injected through React  -->
         <div id="footer"></div>
