--- a/client/js/app/components/styles/ArticleHome.css
+++ b/client/js/app/components/styles/ArticleHome.css
@@ -24,12 +24,10 @@
 .entityLabel {
     width:100%;
     margin-top:50px;
-    background-color: #FFFFFF;
-    color: #2c3e50;
+    background-color: #2c3e50;
+    color: #FFFFFF;
     font-family: 'Raleway', sans-serif;
     font-size: 1.7em;
-    padding-left: 20px;
-    padding-top:10px;
-    padding-bottom:10px;
-    margin-bottom:10px;
+    padding:20px;
+    margin-bottom:0px;
 }
