--- a/client/js/app/components/styles/ArticleSlide.css
+++ b/client/js/app/components/styles/ArticleSlide.css
@@ -19,24 +19,18 @@
 
 .title {
     font-family: 'Raleway', sans-serif;
-    font-size: 1.5em;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding-left: 20px;
-    padding-top:20px;
+    font-size: 1.2em;
     padding-bottom:20px;
-    padding-right:20px;
+    width:100%;
 }
 
 .description {
     font-family: 'Raleway', sans-serif;
-    font-size: 1em;
-    padding-top:20px;
-    padding-bottom:20px;
+    font-size: 0.8em;
+    padding:30px;
     background-color: rgba(0, 0, 0, 0.7);
-    padding-left:20px;
-    padding-right:20px;
-    position: relative;
-    vertical-align: bottom;
     line-height: 1.5em;
-    margin-top:200px;
+    width:100%;
+    position: absolute;
+    bottom:0px;
 }
